@@ -7,6 +7,14 @@
      [auth2-pubkey.c sshd.c sshd_config.5]
      Remove default of AuthorizedCommandUser. Administrators are now expected
      to explicitly specify a user. feedback and ok markus@
+   - djm@cvs.openbsd.org 2012/11/04 11:09:15
+     [auth.h auth1.c auth2.c monitor.c servconf.c servconf.h sshd.c]
+     [sshd_config.5]
+     Support multiple required authentication via an AuthenticationMethods
+     option. This option lists one or more comma-separated lists of
+     authentication method names. Successful completion of all the methods in
+     any list is required for authentication to complete;
+     feedback and ok markus@
 
 20121030
  - (djm) OpenBSD CVS Sync
